--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
     }
 
     body {
-      background: #000000;            /* BLACK BACKGROUND */
+      background: #000000;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      font-family: "Press Start 2P", system-ui, monospace;  /* 8-BIT FONT */
+      font-family: "Press Start 2P", system-ui, monospace;
       color: #f4f4f4;
     }
 
-    /* Main “screen” */
     .shell {
       max-width: 1120px;
       width: 100%;
       padding: 18px;
       background: #111111;
-      border: 4px solid #3eff7a;      /* neon-ish outline */
+      border: 4px solid #3eff7a;
       box-shadow: 0 0 0 4px #000000, 0 0 24px #3eff7a55;
       display: grid;
       grid-template-columns: minmax(260px, 320px) minmax(420px, 700px);
@@ -119,21 +118,39 @@
       image-rendering: pixelated;
     }
 
-    button {
+    .btn-row {
       margin-top: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      align-items: center;
+    }
+
+    button {
       padding: 10px 18px;
-      background: #3eff7a;
-      color: #111111;
-      border: 3px solid #f4f4f4;
       border-radius: 0;
       font-size: 8px;
       letter-spacing: 0.18em;
       text-transform: uppercase;
       cursor: pointer;
+      border: 3px solid #f4f4f4;
     }
 
-    button:hover {
+    #generateBtn {
+      background: #3eff7a;
+      color: #111111;
+    }
+    #generateBtn:hover {
       background: #9affb5;
+    }
+
+    #chaosBtn {
+      background: #ff1744;
+      color: #ffffff;
+      box-shadow: 0 0 10px #ff174477;
+    }
+    #chaosBtn:hover {
+      background: #ff617f;
     }
 
     .note {
@@ -150,6 +167,9 @@
       }
       .canvas-wrap {
         order: -1;
+      }
+      .btn-row {
+        flex-direction: column;
       }
     }
   </style>
@@ -179,8 +199,13 @@
 
     <section class="canvas-wrap">
       <canvas id="modernistCanvas" width="650" height="420"></canvas>
-      <button id="generateBtn">ENTER THE STUDIO</button>
-      <div class="note">PRESS AGAIN TO HANG A NEW POLITE MODERNIST ABSTRACTION.</div>
+      <div class="btn-row">
+        <button id="generateBtn">ENTER THE STUDIO</button>
+        <button id="chaosBtn">DON'T PRESS THIS BUTTON</button>
+      </div>
+      <div class="note">
+        GREEN: POLITE MODERNISM. RED: FULL NERVOUS BREAKDOWN (WOLS / SONDEREBORG / MATHIEU MODE).
+      </div>
     </section>
   </div>
 
@@ -188,6 +213,7 @@
     const canvas = document.getElementById("modernistCanvas");
     const ctx = canvas.getContext("2d");
     const btn = document.getElementById("generateBtn");
+    const chaosBtn = document.getElementById("chaosBtn");
     const dialogueEl = document.getElementById("dialogueText");
 
     // ---- AUDIO (Web Audio for BG, <audio> for clicks) ----
@@ -214,10 +240,8 @@
       musicStarted = true;
 
       ensureAudioContext();
-
       startAmbientVoices();
 
-      // fade in
       const now = audioCtx.currentTime;
       musicGain.gain.cancelScheduledValues(now);
       musicGain.gain.setValueAtTime(0, now);
@@ -238,7 +262,6 @@
       } catch (e) {}
     }
 
-    // Simple scale for ambient notes (slightly melancholic)
     const noteFreqs = [110.0, 130.81, 146.83, 164.81, 174.61, 196.0, 220.0];
 
     function choice(arr) {
@@ -249,12 +272,14 @@
       return Math.random() * (max - min) + min;
     }
 
-    // Create two wandering detuned voices
+    function randi(min, max) {
+      return Math.floor(rand(min, max));
+    }
+
     function startAmbientVoices() {
       if (!audioCtx || !musicGain) return;
-
-      makeVoice(130.81, -8); // voice 1
-      makeVoice(98.0, 7);    // voice 2
+      makeVoice(130.81, -8);
+      makeVoice(98.0, 7);
     }
 
     function makeVoice(baseFreq, detune) {
@@ -294,7 +319,7 @@
       step();
     }
 
-    // ---- TYPEWRITER TEXT ----
+    // ---- TYPEWRITER ----
     const dialogueText = [
       "ALL ARTISTS ORIGINALLY BOOKED FOR THIS BOOTH HAVE PULLED OUT.",
       "FOR... REASONS.",
@@ -316,7 +341,6 @@
         dialogueEl.textContent = dialogueText.slice(0, dialogueIndex);
         dialogueIndex++;
 
-        // soft click for non-whitespace chars
         if (char && char !== "\n" && char !== " ") {
           playClickSoft();
         }
@@ -328,18 +352,34 @@
       }
     }
 
-    // ---- MODERNIST / ANXIOUS GENERATOR (same as before) ----
+    // ---- PALETTES ----
     const palettes = [
       ["#f3eee3", "#b6493d", "#2c4b3f", "#e0b758", "#101010", "#3e3c47"],
       ["#f3eee3", "#c4523b", "#4b5f6b", "#d5b889", "#191919", "#5b463a"],
       ["#f3eee3", "#a73e3c", "#1f3e34", "#e1c177", "#111111", "#494860"]
     ];
 
-    function randi(min, max) {
-      return Math.floor(rand(min, max));
+    const chaosPalettes = [
+      ["#f2eddc", "#111111", "#b10f2e", "#f5c453", "#224c6b", "#ffffff"],
+      ["#f7f3e7", "#050505", "#d41c31", "#ffed4a", "#2b4f3a", "#fefefe"]
+    ];
+
+    // ---- “POLITE” MODERNIST GENERATOR ----
+    function drawArt() {
+      baseComposition({ chaos: false });
     }
 
-    function drawArt() {
+    // ---- CHAOS GENERATOR ----
+    function drawChaoticArt() {
+      baseComposition({ chaos: true });
+      // extra chaos “overpainting”
+      addGesturalStrokes();
+      addInkSplats();
+      addHeavyNoise(0.18);
+    }
+
+    // shared base composition logic
+    function baseComposition({ chaos }) {
       const w = canvas.width;
       const h = canvas.height;
 
@@ -347,7 +387,7 @@
       ctx.globalAlpha = 1;
       ctx.clearRect(0, 0, w, h);
 
-      const palette = choice(palettes);
+      const palette = chaos ? choice(chaosPalettes) : choice(palettes);
       const paper = palette[0];
       const inks = palette.slice(1);
 
@@ -372,7 +412,7 @@
       const compW = innerW - m * 2;
       const compH = innerH - m * 2;
 
-      addNoise(0.11);
+      addNoise(chaos ? 0.14 : 0.11);
 
       // underpaint
       ctx.save();
@@ -385,13 +425,13 @@
       ctx.fillRect(-compW / 2, -compH / 2, compW, compH);
       ctx.restore();
 
-      if (Math.random() < 0.7) {
+      if (Math.random() < (chaos ? 0.9 : 0.7)) {
         ctx.save();
         ctx.translate(
           marginX + innerW / 2 + rand(-18, 18),
           marginY + innerH / 2 + rand(-18, 18)
         );
-        ctx.rotate(rand(-8, 8) * Math.PI / 180);
+        ctx.rotate(rand(-10, 10) * Math.PI / 180);
         ctx.globalAlpha = 0.35;
         ctx.fillStyle = choice(inks);
         ctx.fillRect(
@@ -414,23 +454,23 @@
       ctx.fillRect(-compW * 0.42, -compH * 0.46, compW * 0.84, compH * 0.94);
       ctx.restore();
 
-      const barCount = randi(6, 11);
+      const barCount = chaos ? randi(4, 8) : randi(6, 11);
       for (let i = 0; i < barCount; i++) {
         drawBar(compX, compY, compW, compH, inks);
       }
 
-      if (Math.random() < 0.7) {
-        drawDiagonalSlab(compX, compY, compW, compH, inks);
+      if (Math.random() < (chaos ? 0.9 : 0.7)) {
+        drawDiagonalSlab(compX, compY, compW, compH, inks, chaos);
       }
 
-      const lineCount = randi(5, 11);
+      const lineCount = chaos ? randi(10, 20) : randi(5, 11);
       for (let i = 0; i < lineCount; i++) {
-        drawAnxiousLine(compX, compY, compW, compH, inks);
+        drawAnxiousLine(compX, compY, compW, compH, inks, chaos);
       }
 
-      const voidCount = randi(1, 4);
+      const voidCount = chaos ? randi(0, 3) : randi(1, 4);
       for (let i = 0; i < voidCount; i++) {
-        drawVoid(compX, compY, compW, compH, paper);
+        drawVoid(compX, compY, compW, compH, paper, chaos);
       }
 
       const chipCount = randi(1, 5);
@@ -438,7 +478,7 @@
         drawEdgeChip(marginX, marginY, innerW, innerH, inks);
       }
 
-      if (Math.random() < 0.6) {
+      if (!chaos && Math.random() < 0.6) {
         drawDisc(compX, compY, compW, compH, inks);
       }
 
@@ -491,76 +531,88 @@
       ctx.restore();
     }
 
-    function drawDiagonalSlab(compX, compY, compW, compH, inks) {
+    function drawDiagonalSlab(compX, compY, compW, compH, inks, chaos) {
       ctx.save();
       const color = choice(inks);
       ctx.fillStyle = color;
-      ctx.globalAlpha = 0.85;
+      ctx.globalAlpha = chaos ? 0.95 : 0.85;
 
-      const w = compW * rand(0.35, 0.7);
-      const h = compH * rand(0.12, 0.22);
+      const w = compW * rand(0.35, 0.9);
+      const h = compH * rand(0.08, chaos ? 0.35 : 0.22);
       const x = compX + compW * rand(0.1, 0.5);
       const y = compY + compH * rand(0.1, 0.8);
-      const angle = rand(-25, -12) * Math.PI / 180;
+      const angle = rand(-45, -10) * Math.PI / 180;
 
       ctx.translate(x, y);
       ctx.rotate(angle);
       ctx.fillRect(-w / 2, -h / 2, w, h);
 
       ctx.strokeStyle = "#101010";
-      ctx.lineWidth = 1.2;
+      ctx.lineWidth = chaos ? 2 : 1.2;
       ctx.beginPath();
-      ctx.moveTo(-w / 2 + rand(-2, 2), rand(-2, 2));
-      ctx.lineTo(w / 2 + rand(-2, 2), rand(-2, 2));
+      ctx.moveTo(-w / 2 + rand(-4, 4), rand(-4, 4));
+      ctx.lineTo(w / 2 + rand(-4, 4), rand(-4, 4));
       ctx.stroke();
 
       ctx.globalAlpha = 1;
       ctx.restore();
     }
 
-    function drawAnxiousLine(compX, compY, compW, compH, inks) {
+    function drawAnxiousLine(compX, compY, compW, compH, inks, chaos) {
       ctx.save();
 
       const color = Math.random() < 0.55 ? "#101010" : choice(inks);
       ctx.strokeStyle = color;
-      ctx.lineWidth = Math.random() < 0.3 ? 0.9 : 1.4;
+      ctx.lineWidth = chaos
+        ? (Math.random() < 0.5 ? rand(2, 4) : rand(1, 2))
+        : (Math.random() < 0.3 ? 0.9 : 1.4);
 
       const horizontal = Math.random() < 0.5;
       let x1, y1, x2, y2;
 
       if (horizontal) {
-        y1 = y2 = compY + rand(compH * 0.1, compH * 0.9);
-        x1 = compX + rand(-14, compW * 0.26);
-        x2 = compX + compW - rand(-14, compW * 0.26);
+        y1 = y2 = compY + rand(compH * 0.05, compH * 0.95);
+        x1 = compX + rand(-20, compW * 0.3);
+        x2 = compX + compW - rand(-20, compW * 0.3);
       } else {
-        x1 = x2 = compX + rand(compW * 0.1, compW * 0.9);
-        y1 = compY + rand(-14, compH * 0.26);
-        y2 = compY + compH - rand(-14, compH * 0.26);
+        x1 = x2 = compX + rand(compW * 0.05, compW * 0.95);
+        y1 = compY + rand(-20, compH * 0.3);
+        y2 = compY + compH - rand(-20, compH * 0.3);
       }
 
-      const jitter = () => rand(-3.1, 3.1);
+      const jitter = () => rand(chaos ? -6 : -3.1, chaos ? 6 : 3.1);
 
       ctx.beginPath();
       ctx.moveTo(x1 + jitter(), y1 + jitter());
       ctx.lineTo(x2 + jitter(), y2 + jitter());
       ctx.stroke();
 
+      if (chaos && Math.random() < 0.2) {
+        ctx.lineWidth *= 0.5;
+        ctx.beginPath();
+        ctx.moveTo(x1 + jitter(), y1 + jitter());
+        ctx.lineTo(x2 + jitter(), y2 + jitter());
+        ctx.stroke();
+      }
+
       ctx.restore();
     }
 
-    function drawVoid(compX, compY, compW, compH, paper) {
+    function drawVoid(compX, compY, compW, compH, paper, chaos) {
       ctx.save();
-      const w = compW * rand(0.06, 0.2);
-      const h = compH * rand(0.04, 0.16);
+      const w = compW * rand(0.06, chaos ? 0.35 : 0.2);
+      const h = compH * rand(0.04, chaos ? 0.3 : 0.16);
       const x = compX + rand(0, compW - w);
       const y = compY + rand(0, compH - h);
 
-      ctx.fillStyle = Math.random() < 0.7 ? paper : "#e9e2d6";
+      ctx.fillStyle = chaos
+        ? (Math.random() < 0.4 ? "#000000" : paper)
+        : (Math.random() < 0.7 ? paper : "#e9e2d6");
       ctx.fillRect(x, y, w, h);
 
-      if (Math.random() < 0.5) {
+      if (Math.random() < (chaos ? 0.7 : 0.5)) {
         ctx.strokeStyle = "#111111";
-        ctx.lineWidth = 0.7;
+        ctx.lineWidth = chaos ? 1.2 : 0.7;
         ctx.strokeRect(x, y, w, h);
       }
 
@@ -633,6 +685,10 @@
       ctx.putImageData(imgData, 0, 0);
     }
 
+    function addHeavyNoise(strength = 0.2) {
+      addNoise(strength);
+    }
+
     function addVignette() {
       const grd = ctx.createRadialGradient(
         canvas.width / 2,
@@ -649,11 +705,74 @@
       ctx.fillRect(0, 0, canvas.width, canvas.height);
     }
 
+    // extra gestural strokes (Wols / Sonderborg / Mathieu vibes)
+    function addGesturalStrokes() {
+      const w = canvas.width;
+      const h = canvas.height;
+
+      const strokeCount = randi(6, 14);
+      for (let i = 0; i < strokeCount; i++) {
+        ctx.save();
+        ctx.globalAlpha = rand(0.4, 0.9);
+        ctx.strokeStyle = Math.random() < 0.6 ? "#000000" : "#ffffff";
+        ctx.lineWidth = rand(2, 7);
+
+        const cx = rand(w * 0.1, w * 0.9);
+        const cy = rand(h * 0.1, h * 0.9);
+        const radius = rand(40, 140);
+        const angleStart = rand(0, Math.PI * 2);
+        const angleEnd = angleStart + rand(Math.PI * 0.3, Math.PI * 1.4);
+
+        ctx.beginPath();
+        ctx.arc(cx, cy, radius, angleStart, angleEnd);
+        ctx.stroke();
+        ctx.restore();
+      }
+    }
+
+    function addInkSplats() {
+      const w = canvas.width;
+      const h = canvas.height;
+
+      const splatCount = randi(10, 25);
+      for (let i = 0; i < splatCount; i++) {
+        ctx.save();
+        const x = rand(w * 0.1, w * 0.9);
+        const y = rand(h * 0.1, h * 0.9);
+        const r = rand(3, 12);
+        ctx.globalAlpha = rand(0.4, 0.95);
+        ctx.fillStyle = Math.random() < 0.7 ? "#000000" : "#ffffff";
+        ctx.beginPath();
+        ctx.arc(x, y, r, 0, Math.PI * 2);
+        ctx.fill();
+
+        // little spiky legs
+        const legCount = randi(3, 7);
+        for (let j = 0; j < legCount; j++) {
+          const angle = rand(0, Math.PI * 2);
+          const len = rand(8, 30);
+          ctx.strokeStyle = ctx.fillStyle;
+          ctx.lineWidth = rand(1, 3);
+          ctx.beginPath();
+          ctx.moveTo(x, y);
+          ctx.lineTo(x + Math.cos(angle) * len, y + Math.sin(angle) * len);
+          ctx.stroke();
+        }
+        ctx.restore();
+      }
+    }
+
     // ---- INTERACTION ----
     btn.addEventListener("click", () => {
       startMusic();
       playClickMain();
       drawArt();
+    });
+
+    chaosBtn.addEventListener("click", () => {
+      startMusic();
+      playClickMain();
+      drawChaoticArt();
     });
 
     window.addEventListener("keydown", () => {
@@ -667,3 +786,4 @@
   </script>
 </body>
 </html>
+
